# exact-poly

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json
.github/workflows/: build.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-baseline-tests.txt  task-1-demo-build.txt  task-1-summary.txt  task-1-wasm-build.txt  task-10-aabb-migration.txt  task-11-sat-migration.txt  task-12-spatial-migration.txt  task-13-shared-edge-migration.txt  task-14-overlap-containment-migration.txt  task-15-topology-migration.txt  task-16-pipeline-cleanup.txt  task-17-wasm-helpers.txt  task-18-wasm-split.txt  task-19-lib-clean.txt  task-2-area-validation-tests.txt  task-20-dead-exports.txt  task-21-typescript-types.txt  task-22-config-comments.txt  task-23-rename-version.txt  task-24-demo-update.txt  task-3-sat-aabb-tests.txt  task-4-spatial-shared-edge-tests.txt  task-5-overlap-containment-tests.txt  task-6-topology-onchain-tests.txt  task-7-pipeline-tests.txt  task-8-area-migration.txt  task-9-validation-migration.txt  task-f3-manual-qa.txt
.sisyphus/plans/: refactor-representation.md
demo/: index.html  package-lock.json  package.json  wrangler.toml
pkg/: exact_poly.d.ts  exact_poly.js  exact_poly_bg.js  exact_poly_bg.wasm  exact_poly_bg.wasm.d.ts  package.json
src/: aabb.rs  area.rs  bayazit.rs  constants.rs  containment.rs  decompose.rs  ear_clip.rs  exact_partition.rs  hertel_mehlhorn.rs  lib.rs  overlap.rs  primitives.rs  ring.rs  sat.rs  shared_edge.rs  signed.rs  spatial.rs  topology.rs  types.rs  validate_onchain.rs  validation.rs
src/wasm/: mod.rs  (+12 more)
(+24 files in other folders)
