[package]
name = "exact-poly"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Integer polygon geometry library — exact arithmetic, no float errors"
repository = "https://github.com/mercaearth/exact-poly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
